--- a/style.css
+++ b/style.css
@@ -93,10 +93,13 @@ h3 {
   font-size: 30px;
   color: rgb(129, 129, 129);
   margin-right: 30px;
-
+  cursor: pointer;
+  user-select: none;
 }
 
-
+.fas:hover {
+filter: brightness(80%);
+}
 
 .main-button {
   font-size: 40px;
@@ -106,7 +109,7 @@ h3 {
 
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
-  
+
   .player-container {
     width: 95vw;
   }
